k8s-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-demo-dev
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: app
  namespace: docker-demo-dev
spec:
  replicas: 4
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: dtr.demo.dckr.org/demo/docker-demo:latest
          volumeMounts:
            - name: mysecret
              mountPath: "/etc/mysecrets"
              readOnly: true
          ports:
            - containerPort: 8080
      volumes:
        - name: mysecret
          secret:
            secretName: mysecret
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: db
  namespace: docker-demo-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:latest
          ports:
            - containerPort: 5432
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: docker-demo-dev
spec:
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: docker-demo-dev
spec:
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: docker-demo-dev
  name: docker-demo-dev-ingress
spec:
  rules:
  - host: docker-demo-dev-k8s.demo.dckr.org
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 8080
